Bug 105485 - With track changes enabled, deleted comments persist in DOCX format
Summary: With track changes enabled, deleted comments persist in DOCX format
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0
Keywords: filter:docx
: 108790 (view as bug list)
Depends on:
Blocks: Track-Changes DOCX-Limitations DOCX-Comments DOCX-Track-Changes
  Show dependency treegraph
 
Reported: 2017-01-23 11:44 UTC by fiendishx
Modified: 2023-01-23 17:33 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Example DOCX with two comments, tracked changes (5.13 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-01-23 17:33 UTC, Stéphane Guillou (stragu)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description fiendishx 2017-01-23 11:44:20 UTC
Fedora 25, LibreOffice 5.3.0.2 installed from downloaded RPMs

If I make a new docx, write some text, enable track changes, add some comments, quit Writer (or maybe Writer crashed and quit itself), and then re-open my docx in a new Writer session, I can't delete my own comments made in the previous session. The highlighted text stays highlighted, the comment box gets a big X across it, and if I close and re-open the document again the comments are still there.
Comment 1 Buovjaga 2017-01-25 13:08:24 UTC Comment hidden (obsolete)
Comment 2 fiendishx 2017-01-25 13:21:23 UTC
(In reply to Buovjaga from comment #1)
> Edit - Track changes - Manage. Accept your deletions.
> Closing.

The X-ed state is not preserved across saves, so there is definitely still a bug.
Comment 3 Buovjaga 2017-01-25 14:46:17 UTC
Hmm.. you are right + the behavior is different when using ODT. With ODT, there is no tracking of deleted comments: they just disappear immediately upon deleting.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.4.0.0.alpha0+
Build ID: 63fd4c97118a943c84ba5a666cf8c9cc54b511c7
CPU Threads: 8; OS Version: Linux 4.8; UI Render: default; VCL: kde4; 
Locale: fi-FI (fi_FI.UTF-8); Calc: group
Built on January 22th 2016

Arch Linux 64-bit
Version 3.6.7.2 (Build ID: e183d5b)
Comment 4 Buovjaga 2017-06-28 17:42:12 UTC
*** Bug 108790 has been marked as a duplicate of this bug. ***
Comment 5 Buovjaga 2017-06-28 17:45:46 UTC Comment hidden (obsolete)
Comment 6 fiendishx 2017-06-28 18:09:53 UTC Comment hidden (obsolete)
Comment 7 fiendishx 2017-06-28 18:14:49 UTC Comment hidden (obsolete)
Comment 8 fiendishx 2017-06-28 18:17:32 UTC
(In reply to fiendishx from comment #7)
> (In reply to fiendishx from comment #6)
> > (In reply to Buovjaga from comment #5)
> > > Ah, this is a DOC/X limitation:
> > > https://answers.microsoft.com/en-us/msoffice/forum/msoffice_word-mso_other/i-
> > > need-help-restoring-deleted-comments-on-a/15841ce1-bf70-4b42-85e0-
> > > 2ae45574c3fa
> > > 
> > > Word's Track Changes feature doesn't track comments, either as they're added
> > > or as they're deleted. There's nothing in that copy of the document to
> > > restore.
> > 
> > You have misunderstood the bug report. I don't care about tracking the
> > history of comments. I care that in some instances a comment once added
> > cannot be removed.
> 
> Oh you can't edit responses? Oops. Sorry. Let me add...
> 
> At least without going through some entirely non-obvious dance that isn't,
> as you say, required for ODT documents.
> 
> When I say that the "X-ed state isn't being preserved across saves", what I
> mean, though perhaps I wasn't clear, is that I made an effort to remove the
> comment, the application displayed a behavior consistent with at least some
> kind of process toward removal, and then after closing and opening the
> document, my action has obviously not been followed because not only is the
> comment still there but now the X is gone too.

Ugh. I'm so bad at this...

And further, if ODT removes the comment immediately and does not require some terrible dance of a thousand clicks, could DOCX not also do the same?
Comment 9 Buovjaga 2017-06-28 18:23:37 UTC
Yeah, I guess I forgot the point of my comment 3.
Comment 10 Aron Budea 2017-06-28 18:58:39 UTC
(In reply to Buovjaga from comment #3)
> Hmm.. you are right + the behavior is different when using ODT. With ODT,
> there is no tracking of deleted comments: they just disappear immediately
> upon deleting.

There is, in ODT format comment addition/deletion is tracked (changing isn't).

Let's change back severity to normal, as the bug does prevent professional work, and is an interoperability issue between Writer and Word.
Comment 11 QA Administrators 2018-10-06 02:49:13 UTC Comment hidden (obsolete, spam)
Comment 12 Commit Notification 2019-08-26 13:24:54 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/419b70b5d4db227509614bdea5b4b89bcf7a6032%5E%21

tdf#105485 DOCX: import deleted comments as deleted

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Timur 2019-08-29 08:06:57 UTC
From LO side this looks better, comment deleted with track changes is now crossed also when DOCX is round-tripped (like ODT). 

But not from MSO side: while crossed (deleted) comment from ODT is not shown in MSO (correct behavior), both crossed and uncrossed comments are shown in MSO, as if not deleted in LO (not correct).
That's previous behavior, but László please see in this bug to be complete.
Comment 14 Timur 2019-08-29 08:12:24 UTC
That issue was reported in Bug 108791 for DOC so DOCX can be dealt with here or there, László please advise.
Comment 15 Stéphane Guillou (stragu) 2023-01-23 17:33:14 UTC
Created attachment 184854 [details]
Example DOCX with two comments, tracked changes

The original issue is resolved: comments can be deleted in a DOCX with tracked changes.

Test with attached DOCX:
1. Open DOCX
2. Delete first comment
3. Save using same format. A reload shows that the comment is crossed out. "Edit > Track changes > Manage" shows one comment delete action, accepting it makes the comment disappear. All good there.
4. Close (without saving the accepting of the change)
5. Open in MS Word

Result:
Both comments are show, there is no visual indication of the comment having been deleted. However, accepting all changes makes the deleted comment disappear.

As Timur said, this is different to if the same is done with an ODT file, but the fact that we can accept the DOCX's deleted comment change in MSO means we've done what we could on our end, and the remaining issues might be MSO's.

Tested with:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: cd20a17ab703e97191b4e3421527267ef82a704f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

And:

Microsoft® Word for Microsoft 365 MSO (Version 2212 Build 16.0.15928.20196) 64-bit