tdf#105485 DOCX: import deleted comments as deleted

in tracked deletions, instead of importing them
as normal comments of the actual text content,
ie. showing them in the Hide Changes mode, too,
without crossing out.

Change-Id: I7f84d2e9f2dd280bbca2236b40bab83b94d40c68